<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity"
	    android:orientation="vertical" >
	
	    <Button 
	        android:id="@+id/btn_menu_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_dialog"/>
	
	    <Button 
	        android:id="@+id/btn_msg_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/msg_dialog"/>

	    <Button 
	        android:id="@+id/btn_msg_dialog_close"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/msg_dialog_close"/>
	    
	    <Button 
	        android:id="@+id/btn_input_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/input_dialog"/>
	
	    <Button 
	        android:id="@+id/btn_items_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/items_dialog"/>
	
	    <Button 
	        android:id="@+id/btn_single_choice_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/single_choice_dialog"/>
	
	    <Button 
	        android:id="@+id/btn_multi_choice_dialog"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/multi_choice_dialog"/>
	
	    <Button 
	        android:id="@+id/btn_progress_dialog_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/progress_dialog_spinner"/>
	
	    <Button 
	        android:id="@+id/btn_progress_dialog_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/progress_dialog_horizontal"/>
	
	</LinearLayout>
</ScrollView>
